# libjustify

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.guess  config.h.in  configure  configure.ac  configure.in  hnjalloc.c  hnjalloc.h  hqjust.c  hqjust.h  hsjust.c  hsjust.h  hyphen.c  just.h  libhnj.spec  libhnj.spec.in  libjustify-config.in  libjustify.pc  libjustify.pc.in  namecontext.c  namecontext.h  parseAFM.c  parseAFM.h  psset.c  z_misc.h
