dnl Initialize the autoconf settings

AC_INIT

LIBHNJ_MAJOR_VERSION=0
LIBHNJ_MINOR_VERSION=1
LIBHNJ_MICRO_VERSION=1
LIBHNJ_VERSION=$LIBHNJ_MAJOR_VERSION.$LIBHNJ_MINOR_VERSION.$LIBHNJ_MICRO_VERSION

dnl set version info for libhnj.so to package rev - $MAJOR + $MINOR : $MICRO : $MINOR
LIBHNJ_VERSION_INFO=1:1:0

AC_SUBST(LIBHNJ_MAJOR_VERSION)
AC_SUBST(LIBHNJ_MINOR_VERSION)
AC_SUBST(LIBHNJ_MICRO_VERSION)
AC_SUBST(LIBHNJ_VERSION)
AC_SUBST(LIBHNJ_VERSION_INFO)

VERSION=$LIBHNJ_VERSION
PACKAGE=libhnj

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

AC_CHECK_HEADER(hyphen.h, [], [ AC_MSG_ERROR(libhyphen headers not found.)], [])

AM_MAINTAINER_MODE

AC_OUTPUT([Makefile
libhnj-config])
